# Digest

./: .gitignore  DESIGN.md  README.md  alembic.ini  compose.yml  package-lock.json  parsing.ipynb  pyproject.toml
app/: main.py
app/api/: router.py
app/core/: config.py
app/retrieval/: models.py
app/retrieval/parsers/: __init__.py  base.py  rss.py  tchan.py
app/retrieval/processors/: __init__.py  base.py  cleaners.py  enrichers.py  pipeline.py
app/retrieval/sources/: __init__.py  base.py  repository.py
client/: Dockerfile  package-lock.json  package.json
client/src/: App.vue
client/src/mocks/: data.ts
client/src/router/: index.ts
client/src/services/: api.ts
client/src/types/: api.ts
client/src/views/: ContentDetail.vue  HomeView.vue
migrations/: env.py
migrations/versions/: 20250409_1253_1b64d13e9530_initial_migration.py
scripts/: dedup_sources.sql  insert_source.py
src/digest/: main.py  prepare.py
src/digest/api/: router.py
src/digest/api/v1/endpoints/: content.py  sources.py
src/digest/config/: settings.py
src/digest/database/: __init__.py  enums.py  session.py
src/digest/database/models/: content.py  feed.py  relationships.py  source.py  user.py
src/digest/database/repositories/: content.py  sources.py  subscription.py  user.py
src/digest/retrieval/: __init__.py  embedder.py  task_manager.py
src/digest/retrieval/parsers/: __init__.py  base.py  rss.py  tchan.py
src/digest/retrieval/processors/: __init__.py  base.py  cleaners.py  enrichers.py  pipeline.py
src/digest/retrieval/sources/: __init__.py  base.py  repository.py
tests/: README.md  conftest.py
tests/retrieval/: test_integration.py
tests/retrieval/parsers/: test_rss.py  test_tchan.py
tests/retrieval/processors/: test_pipeline.py
tests/retrieval/sources/: test_repository.py
