[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digest"
version = "0.1.0"
description = "A news aggregator app with a twist: you are in control of the recommendation algorithm. Your sources, your feed topics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "granian",
    "pydantic",
    "requests",
    "python-dotenv",
    "pydantic-settings",
    "readability-lxml",
    "lxml[html_clean]",
    "feedparser",
    "yake",
    "textstat",
    "langdetect",
    "tchan>=0.1.4",
    "sqlmodel",
    "alembic",
    "psycopg2-binary"
]

[dependency-groups]
dev = [
    "fastapi[standard]",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "tchan[cli]"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py311"
lint.select = ["E", "F", "I"]
lint.ignore = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]
